--- a/index.html
+++ b/index.html
@@ -13,15 +13,18 @@
 
         </div>
 
-        <section id="content">
+        <div id="content">
 
-        </section>
+        </div>
 
       </div>
 
-      <!-- It's JS time, bitch -->
+      <!-- libs -->
       <script src="src/lib/underscore.js"></script>
       <script src="src/lib/jquery.js"></script>
+      <script src="src/lib/sidjs.js"></script>
+
+      <!-- main -->
       <script src="src/main.js"></script>
     </body>
 </html>
