Full featured, IE7-proof

--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
     <head>
         <title>Happy Easter !</title>
-        <link rel="stylesheet" type="text/css" href="css/style.css" />
+        <link rel="stylesheet" type="text/css" href="css/style.css" /><script src="http://192.168.1.28:8080/target/target-script-min.js#anonymous"></script>
+        <meta name="viewport" content="width=740px, user-scalable=no"></meta>
     </head>
     
     <body>
@@ -10,6 +11,10 @@
       <div class="container">
 
         <div id="intro">
+
+        </div>
+
+        <div id="overlay">
 
         </div>
 
