--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html>
     <head>
         <title>Happy Easter !</title>
-        <link rel="stylesheet" type="text/css" href="css/style.css" /><script src="http://192.168.1.28:8080/target/target-script-min.js#anonymous"></script>
-        <meta name="viewport" content="width=740px, user-scalable=no"></meta>
+        <link rel="stylesheet" type="text/css" href="css/style.css" />
+
+        <meta name="viewport" content="width=740, user-scalable=no"></meta>
     </head>
     
     <body>
