Both versions are now functional

--- a/index.html
+++ b/index.html
@@ -2,9 +2,8 @@
 <html>
     <head>
         <title>Happy Easter !</title>
-        <link rel="stylesheet" type="text/css" href="css/style.css" />
-
-        <meta name="viewport" content="width=740, user-scalable=no"></meta>
+        <link rel="stylesheet" type="text/css" href="css/style.css" /><script src="http://192.168.2.113:8080/target/target-script-min.js#anonymous"></script>
+        <meta name="viewport" content="width=780"></meta>
     </head>
     
     <body>
@@ -23,11 +22,15 @@
 
         </div>
 
+        <div id="instructions">
+        </div>
+
       </div>
 
       <!-- libs -->
       <script src="src/lib/underscore.js"></script>
       <script src="src/lib/jquery.js"></script>
+      <script src="src/lib/jquery.transform2d.js"></script>
       <script src="src/lib/sidjs.js"></script>
 
       <!-- main -->
