Instructions fully working, needs tweaking

--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html>
     <head>
         <title>Happy Easter !</title>
-        <link rel="stylesheet" type="text/css" href="css/style.css" /><script src="http://192.168.2.113:8080/target/target-script-min.js#anonymous"></script>
+        <link rel="stylesheet" type="text/css" href="css/style.css" />
         <meta name="viewport" content="width=780"></meta>
+        <meta http-equiv="X-UA-Compatible" content="IE=EmulateIE7" />
     </head>
     
     <body>
@@ -29,8 +30,8 @@
 
       <!-- libs -->
       <script src="src/lib/underscore.js"></script>
+      <script src="src/lib/modernizr.js"></script>
       <script src="src/lib/jquery.js"></script>
-      <script src="src/lib/jquery.transform2d.js"></script>
       <script src="src/lib/sidjs.js"></script>
 
       <!-- main -->
