instructions are there, more debugging (notably fixes for android 4)

--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
     <head>
         <title>Happy Easter !</title>
         <link rel="stylesheet" type="text/css" href="css/style.css" />
-        <meta name="viewport" content="width=780"></meta>
+        <script src="http://192.168.2.113:8080/target/target-script-min.js#anonymous"></script>
+      
         <meta http-equiv="X-UA-Compatible" content="IE=EmulateIE7" />
+        <meta name="viewport" content="width=780"></meta>
     </head>
     
     <body>
@@ -20,6 +22,9 @@
         </div>
 
         <div id="content">
+
+        </div>
+        <div id="contentcopy">
 
         </div>
 
