New version of the anim : now with an opening card.

--- a/index.html
+++ b/index.html
@@ -5,12 +5,16 @@
         <link rel="stylesheet" type="text/css" href="css/style.css" />
        
         <meta http-equiv="X-UA-Compatible" content="IE=EmulateIE7" />
-        <meta name="viewport" content="width=780"></meta>
+        <meta name="viewport" content="width=1200"></meta>
     </head>
     
     <body>
 
       <div class="container">
+
+        <div id="cover">
+
+        </div>
 
         <div id="intro">
 
@@ -28,6 +32,7 @@
         </div>
 
         <div id="instructions">
+
         </div>
 
       </div>
