updates for compatibility version. Less stupid tiling for canvas version...

--- a/index.html
+++ b/index.html
@@ -13,15 +13,23 @@
       <div class="container">
 
         <div id="cover">
+        
+          <div class="logo white">
 
+          </div>
+        
         </div>
 
-        <div id="intro">
+        <div id="fake-canvas">
+          <div id="intro">
 
-        </div>
+          </div>
+          <div id="overlay">
 
-        <div id="overlay">
+          </div>
+          <div id="fake-background">
 
+          </div>
         </div>
 
         <div id="content">
@@ -32,6 +40,13 @@
         </div>
 
         <div id="instructions">
+
+        </div>
+        <div id="insideshadow">
+
+        </div>
+
+        <div class="logo">
 
         </div>
 
