Updated support for older browsers

--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
           <div id="fake-background">
 
           </div>
+          <div id="fake-content">
+
+          </div>
         </div>
 
         <div id="content">
