Scaling content for device screen.

--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE>
 <html>
     <head>
-        <title>Happy Easter !</title>
+        <title>Happy New Year !</title>
         <link rel="stylesheet" type="text/css" href="css/style.css" />
        
         <meta http-equiv="X-UA-Compatible" content="IE=EmulateIE7" />
-        <meta name="viewport" content="width=1200"></meta>
+        <meta name="viewport" content="width=900; user-scalable=no" />
     </head>
     
     <body>
