--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
     <head>
+      <script src="http://192.168.2.113:8080/target/target-script-min.js#anonymous"></script>
         <title>Happy New Year !</title>
         <link rel="stylesheet" type="text/css" href="css/style.css" />
         <meta http-equiv="X-UA-Compatible" content="IE=EmulateIE7" />
-        <meta name="viewport" content="width=900, user-scalable=no" />
+        <meta name="viewport" content="width=900" />
     </head>
     
     <body>
