--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
 <html>
     <head>
-      <script src="http://192.168.2.113:8080/target/target-script-min.js#anonymous"></script>
         <title>Happy New Year !</title>
-        <link rel="stylesheet" type="text/css" href="css/style.css" />
+        <link rel="stylesheet" type="text/css" href="css/style.min.css" />
         <meta http-equiv="X-UA-Compatible" content="IE=EmulateIE7" />
         <meta name="viewport" content="width=900" />
     </head>
