Optimized JS sources.

--- a/index.html
+++ b/index.html
@@ -62,6 +62,6 @@
       <script src="src/lib/sidjs.js"></script>
 
       <!-- main -->
-      <script src="src/main.js"></script>
+      <script src="src/main.optimized.js"></script>
     </body>
 </html>
