--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <title>Happy New Year !</title>
         <link rel="stylesheet" type="text/css" href="css/style.min.css" />
         <meta http-equiv="X-UA-Compatible" content="IE=EmulateIE7" />
+        <meta http-equiv="Content-Type" content="text/html;charset=UTF-8" />
         <meta name="viewport" content="width=900" />
     </head>
     
@@ -59,7 +60,7 @@
       <script src="src/lib/underscore.js"></script>
       <script src="src/lib/modernizr.js"></script>
       <script src="src/lib/jquery.js"></script>
-      <script src="src/lib/sidjs.js"></script>
+      <script src="src/lib/sidjs.min.js"></script>
 
       <!-- main -->
       <script src="src/main.optimized.js"></script>
