--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       </div>
 
       <div class="please-wait">
-        <p>Votre carte est en chargement.</p>
+        <p>Chargement</p>
       </div>
 
       <div class="logo">
