Animated loading message

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       </div>
 
       <div class="please-wait">
-        <p>Chargement</p>
+        <p>Chargement <img src="img/loading.gif" width="20" height="6" alt=""></p>
       </div>
 
       <div class="logo">
