--- a/index.html
+++ b/index.html
@@ -7,7 +7,35 @@
         <meta http-equiv="X-UA-Compatible" content="IE=EmulateIE7" />
         <meta http-equiv="Content-Type" content="text/html;charset=UTF-8" />
         <meta name="viewport" content="width=900" />
+        <!-- Basic loading style for the unfortunate/slow -->
+        <style>
 
+          html, body {
+            background: #FCF8F4;
+            height: 100%;
+            width: 100%;
+            overflow: visible;
+          }
+          
+          .please-wait {
+            position: absolute;
+            width: 300px;
+            height: 100px;
+            left: 50%;
+            top: 50%;
+            margin-left: -150px;
+            margin-top: -50px;
+            display: block;
+            z-index: 1;
+            font-size: 20px;
+            font-family: HelveticaNeue, Arial, sans-serif;
+            text-transform: uppercase;
+            text-align: center;
+            font-weight: bold;
+            color: #322927;
+            text-shadow: 0 1px 1px #FFF;
+          }
+        </style>
     </head>
     
     <body>
